# notify-icon-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  doc.yml  publish.yml
src/: lib.rs
